[package]
name = "dios-egraphs"
version = "0.1.0"
authors = ["Alexa VanHattum <amv94@cornell.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dioslib"

[dependencies]
egg =  "0.7.1"
# egg = { git = "https://github.com/sgpthomas/egg.git", branch = "main" }
assert_approx_eq = "1.1.0"
itertools = "0.9.0"
# clap = "2.33.2"
argh = "0.1"
lexpr = "0.2.5"
libc = "0.2.98"
log = "0.4"
env_logger = { version = "0.7", default-features = false }
json = "0.12"
rand = "0.8.4"

[features]
# For setting the vector width, default is 4
vec_width_2 = []
vec_width_8 = []
